include(cmake_utils/add_app_example.cmake)

add_subdirectory(example_utils)

add_subdirectory(example_apps/custom_colour)
add_subdirectory(example_apps/custom_graph_attributes)
add_subdirectory(example_apps/fill)
add_subdirectory(example_apps/label)
add_subdirectory(example_apps/lim)
add_subdirectory(example_apps/loglog)
add_subdirectory(example_apps/lookandfeel)
add_subdirectory(example_apps/lookandfeel_timeline)
add_subdirectory(example_apps/marker)
add_subdirectory(example_apps/move_graph_points)
add_subdirectory(example_apps/realtime)
add_subdirectory(example_apps/semi_log_x)
add_subdirectory(example_apps/semi_log_y)
add_subdirectory(example_apps/simple)
add_subdirectory(example_apps/ticks)
